--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ venv
 *.pyc
 .DS_STORE
 .env
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+sheriffapp/sheriffapp/local_settings.py
+db.sqlite3
+media
+
